Changed to Latest Release

--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -17,8 +17,8 @@
     <string name="md5">MD5</string>
     <string name="sha1">SHA-1</string>
     <string name="recaptcha">reCAPTCHA</string>
-    <string name="github_url">https://github.com/polymorphicshade/MonzaTube</string>
-    <string name="donation_url">https://newpipe.net/donate/</string>
+    <string name="github_url">https://github.com/mrelie/MonzaTube</string>
+    <string name="donation_url">https://monzasal.com/</string>
     <string name="website_url">https://newpipe.net/</string>
     <string name="privacy_policy_url">https://newpipe.net/legal/privacy/</string>
     <string name="faq_url">https://newpipe.net/FAQ/</string>
